Cambios CSS y script

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="learn-more" id="more-michis">More Michis</button>
             </div>
         </div>
-        
+        <div id="mensaje-guardado" class="mensaje-guardado"><span>¡El michi se guardó en favoritos!</span></div>
     </main>
     <footer>
 
