--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -30,12 +30,17 @@
             
             </section>
 
+            <!-- <div>
+                <button id="anterior-btn" onclick="paginaAnterior()">Anterior</button>
+                <button id="siguiente-btn" onclick="paginaSiguiente()">Siguiente</button>
+            </div> -->
 
             <div class="more-michis-button">
                 <button class="learn-more" id="deleteallMichis">Delete All</button>
             </div>
         </div>
-        
+
+        <div id="mensaje-guardado" class="mensaje-guardado"><span></span></div>
     </main>
     <footer>
         <div class="social-networks">
