--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./pages/favorites.html">Favorites</a></li>
-            <li><a href="./pages/videos.html">Videos</a></li>
+            <li><a href="./pages/videos.html">Recommended</a></li>
             <li><a href="./pages/facts.html">Facts</a></li>
         </ul>
     </nav>
@@ -43,7 +43,7 @@
         <div class="social-networks">
             <h4>Social Media</h4>
             <ul>
-                <li><a href="">Github</a></li>
+                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica">Github</a></li>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Twitter</a></li>
             </ul>
