--- a/pages/facts.html
+++ b/pages/facts.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="./favorites.html">Favorites</a></li>
-            <li><a href="./videos.html">Videos</a></li>
+            <li><a href="./videos.html">Recommended</a></li>
             <li><a href="./facts.html">Facts</a></li>
         </ul>
     </nav>
@@ -39,7 +39,7 @@
         <div class="social-networks">
             <h4>Social Media</h4>
             <ul>
-                <li><a href="">Github</a></li>
+                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica">Github</a></li>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Twitter</a></li>
             </ul>
