--- a/pages/videos.html
+++ b/pages/videos.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/videos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>😽Chill and Michis😽 Videos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>😽Chill and Michis😽 Recommended Products</title>
 </head>
+
 <body>
     <header>
         <img src="../img/michi-header.jpg" alt="">
@@ -17,26 +20,20 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="./favorites.html">Favorites</a></li>
-            <li><a href="./videos.html">Videos</a></li>
+            <li><a href="./videos.html">Recommended</a></li>
             <li><a href="./facts.html">Facts</a></li>
         </ul>
     </nav>
     <main>
-        <div class="container"> 
-            <section class="random-videos">
+        <div class="container">
             
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/j_YPtt_zbFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-            </section>
-
         </div>
-        
     </main>
     <footer>
         <div class="social-networks">
             <h4>Social Media</h4>
             <ul>
-                <li><a href="">Github</a></li>
+                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica">Github</a></li>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Twitter</a></li>
             </ul>
@@ -54,8 +51,13 @@
 
         <div class="bye-message">
             <h4>More info</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non doloremque facere dolore voluptatum odit animi dolores, eos eligendi vitae earum in modi doloribus natus labore distinctio ratione fugiat. Facilis, provident?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non doloremque facere dolore voluptatum odit
+                animi dolores, eos eligendi vitae earum in modi doloribus natus labore distinctio ratione fugiat.
+                Facilis, provident?</p>
         </div>
     </footer>
+
+    <script src="../scripts/petshop.js"></script>
 </body>
+
 </html>
