un poco responsive 😅

--- a/pages/videos.html
+++ b/pages/videos.html
@@ -51,9 +51,7 @@
 
         <div class="bye-message">
             <h4>More info</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non doloremque facere dolore voluptatum odit
-                animi dolores, eos eligendi vitae earum in modi doloribus natus labore distinctio ratione fugiat.
-                Facilis, provident?</p>
+            <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
     </footer>
 
