menu-mobile agregado

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
             </div>
         </div>
     </nav>
+    <aside>
+        <div class="aside-menu-mobile">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pages/favorites.html">Favorites</a></li>
+                <li><a href="./pages/videos.html">Recommended</a></li>
+                <li><a href="./pages/facts.html">Facts</a></li>
+            </ul>
+        </div>
+    </aside>
     <main>
         <div class="container"> 
             <section class="container-michis">
