Boton menú mobile funciona con js y css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <aside>
-        <div class="aside-menu-mobile">
+        <div class="aside-menu-mobile hidden">
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./pages/favorites.html">Favorites</a></li>
