--- a/pages/facts.html
+++ b/pages/facts.html
@@ -21,6 +21,16 @@
             <li><a href="./facts.html">Facts</a></li>
         </ul>
     </nav>
+    <aside>
+        <div class="aside-menu-mobile hidden">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pages/favorites.html">Favorites</a></li>
+                <li><a href="./pages/videos.html">Recommended</a></li>
+                <li><a href="./pages/facts.html">Facts</a></li>
+            </ul>
+        </div>
+    </aside>
     <main>
         <div class="container"> 
             
