--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -13,21 +13,36 @@
         <img src="../img/michi-header.jpg" alt="">
     </header>
     <nav class="bd-navbar">
-        <figure><img src="../img/logo.png" alt="Logo"></figure>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./favorites.html">Favorites</a></li>
-            <li><a href="./videos.html">Recommended</a></li>
-            <li><a href="./facts.html">Facts</a></li>
-        </ul>
+        <div class="menu-desktop">
+            <figure><img src="../img/logo.png" alt="Logo"></figure>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./facts.html">Facts</a></li>
+            </ul>
+        </div>
+
+        <div class="menu-mobile">
+            <div class="left-menu">
+                <figure>
+                    <img src="./img/icons8-menu.svg" class="left" alt="">
+                </figure>
+            </div>
+
+            <div class="right-menu">
+                <figure>
+                    <img src="./img/logo.png" class="right" alt="Logo">
+                </figure>
+            </div>
     </nav>
     <aside>
         <div class="aside-menu-mobile hidden">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/favorites.html">Favorites</a></li>
-                <li><a href="./pages/videos.html">Recommended</a></li>
-                <li><a href="./pages/facts.html">Facts</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
     </aside>
@@ -40,10 +55,6 @@
             
             </section>
 
-            <!-- <div>
-                <button id="anterior-btn" onclick="paginaAnterior()">Anterior</button>
-                <button id="siguiente-btn" onclick="paginaSiguiente()">Siguiente</button>
-            </div> -->
 
             <div class="more-michis-button">
                 <button class="learn-more" id="deleteallMichis">Delete All</button>
@@ -78,5 +89,6 @@
         </div>
     </footer>
     <script src="../script.js"></script>
+    
 </body>
 </html>
