--- a/pages/facts.html
+++ b/pages/facts.html
@@ -13,13 +13,29 @@
         <img src="../img/michi-header.jpg" alt="">
     </header>
     <nav class="bd-navbar">
-        <figure><img src="../img/logo.png" alt="Logo"></figure>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./favorites.html">Favorites</a></li>
-            <li><a href="./videos.html">Recommended</a></li>
-            <li><a href="./facts.html">Facts</a></li>
-        </ul>
+        <div class="menu-desktop">
+            <figure><img src="../img/logo.png" alt="Logo"></figure>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./facts.html">Facts</a></li>
+            </ul>
+        </div>
+
+        <div class="menu-mobile">
+            <div class="left-menu">
+                <figure>
+                    <img src="./img/icons8-menu.svg" class="left" alt="">
+                </figure>
+            </div>
+
+            <div class="right-menu">
+                <figure>
+                    <img src="./img/logo.png" class="right" alt="Logo">
+                </figure>
+            </div>
+        </div>
     </nav>
     <aside>
         <div class="aside-menu-mobile hidden">
