--- a/pages/videos.html
+++ b/pages/videos.html
@@ -15,22 +15,39 @@
     <header>
         <img src="../img/michi-header.jpg" alt="">
     </header>
-    <nav class="bd-navbar">
-        <figure><img src="../img/logo.png" alt="Logo"></figure>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./favorites.html">Favorites</a></li>
-            <li><a href="./videos.html">Recommended</a></li>
-            <li><a href="./facts.html">Facts</a></li>
-        </ul>
+    <nav>
+        <div class="menu-desktop">
+            <figure><img src="../img/logo.png" alt="Logo"></figure>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./facts.html">Facts</a></li>
+            </ul>
+        </div>
+
+
+        <div class="menu-mobile">
+            <div class="left-menu">
+                <figure>
+                    <img src="./img/icons8-menu.svg" class="left" alt="">
+                </figure>
+            </div>
+
+            <div class="right-menu">
+                <figure>
+                    <img src="./img/logo.png" class="right" alt="Logo">
+                </figure>
+            </div>
+        </div>
     </nav>
     <aside>
         <div class="aside-menu-mobile hidden">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/favorites.html">Favorites</a></li>
-                <li><a href="./pages/videos.html">Recommended</a></li>
-                <li><a href="./pages/facts.html">Facts</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
     </aside>
