Cambios de direcciones para las imagenes y href

--- a/pages/facts.html
+++ b/pages/facts.html
@@ -26,13 +26,13 @@
         <div class="menu-mobile">
             <div class="left-menu">
                 <figure>
-                    <img src="./img/icons8-menu.svg" class="left" alt="">
+                    <img src="../img/icons8-menu.svg" class="left" alt="">
                 </figure>
             </div>
 
             <div class="right-menu">
                 <figure>
-                    <img src="./img/logo.png" class="right" alt="Logo">
+                    <img src="../img/logo.png" class="right" alt="Logo">
                 </figure>
             </div>
         </div>
@@ -40,10 +40,10 @@
     <aside>
         <div class="aside-menu-mobile hidden">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/favorites.html">Favorites</a></li>
-                <li><a href="./pages/videos.html">Recommended</a></li>
-                <li><a href="./pages/facts.html">Facts</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
     </aside>
