--- a/pages/videos.html
+++ b/pages/videos.html
@@ -30,13 +30,13 @@
         <div class="menu-mobile">
             <div class="left-menu">
                 <figure>
-                    <img src="./img/icons8-menu.svg" class="left" alt="">
+                    <img src="../img/icons8-menu.svg" class="left" alt="">
                 </figure>
             </div>
 
             <div class="right-menu">
                 <figure>
-                    <img src="./img/logo.png" class="right" alt="Logo">
+                    <img src="../img/logo.png" class="right" alt="Logo">
                 </figure>
             </div>
         </div>
