--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./contact.html">Recommended</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./contact.html">Recommended</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -101,7 +101,7 @@
         </div>
     </footer>
 
-    <script src="../scripts/petshop.js"></script>
+    <script src="../scripts/contact.js"></script>
 </body>
 
 </html>
