--- a/pages/facts.html
+++ b/pages/facts.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./contact.html">Recommended</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -42,7 +42,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./videos.html">Recommended</a></li>
+                <li><a href="./contact.html">Recommended</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
