Creando pagina de contacto

--- a/pages/facts.html
+++ b/pages/facts.html
@@ -63,20 +63,21 @@
     </main>
     <footer>
         <div class="social-networks">
-            <h4>Social Media</h4>
+            <h4>Contact Me</h4>
             <ul>
                 <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica">Github</a></li>
                 <li><a href="">Facebook</a></li>
                 <li><a href="">Twitter</a></li>
+                <li><a href="../contact.html">DM</a></li>
             </ul>
         </div>
 
         <div class="credits">
-            <h4>Credits</h4>
+            <h4>Recursos</h4>
             <ul>
                 <li><a href="https://www.wallpaperbetter.com/es/hd-wallpaper-waxow">Header</a></li>
                 <li><a href="https://www.behance.net/gallery/136335253/Michis-Brand-Identity">Logo</a></li>
-                <li><a href="">url</a></li>
+            
                 <li><a href="https://uiverse.io/mrhyddenn/calm-snail-67">Loading</a></li>
             </ul>
         </div>
