--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Recommended</a></li>
+                <li><a href="./contact.html">Contacto</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
                 <textarea id="message" name="message" rows="5" required></textarea>
               </div>
               <div class="more-michis-button">
-                <button class="learn-more" id="more-michis">Enviar</button>
+                <button type="submit" class="learn-more" id="more-michis">Enviar</button>
             </div>
             </form>
         </div>
