--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./pages/favorites.html">Favorites</a></li>
-                <li><a href="./pages/contact.html">Recommended</a></li>
+                <li><a href="./pages/contact.html">Contacto</a></li>
                 <li><a href="./pages/facts.html">Facts</a></li>
             </ul>
         </div>
