--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/videos.css">
+    <link rel="stylesheet" href="../CSS/contact.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>😽Chill and Michis😽 Contacto</title>
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Recommended</a></li>
+                <li><a href="./contact.html">Contacto</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -72,7 +72,7 @@
             </div>
             </form>
         </div>
-        <div id="mensaje-guardado" class="mensaje-guardado"><span></span></div>
+        <div id="mensaje-guardado" class="mensaje-guardado"><span>¡El michi se guardó en favoritos!</span></div>
      
     </main>
     <footer>
