--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Recommended</a></li>
+                <li><a href="./contact.html">Contacto</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -51,6 +51,7 @@
             <div class='mensajito'>
                 <p id="mensajito-emptyFavs">Please, add some michis to your favorite list first, go back to the <a href="../index.html"> home </a>page</p>
             </div>
+
             <section class="container-Favmichis">
             
             </section>
