arregle el foooter aaaaaa

--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -55,14 +55,13 @@
             <section class="container-Favmichis">
             
             </section>
+            <div id="mensaje-guardado" class="mensaje-guardado"></div>
 
-
-            <div class="more-michis-button">
-                <button class="learn-more" id="deleteallMichis">Delete All</button>
-            </div>
         </div>
 
-        <div id="mensaje-guardado" class="mensaje-guardado"><span></span></div>
+        <div class="more-michis-button">
+            <button class="learn-more" id="deleteallMichis">Delete All</button>
+        </div>
     </main>
     <footer>
         <div class="social-networks">
@@ -89,6 +88,7 @@
             <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
     </footer>
+
     <script src="../script.js"></script>
     
 </body>
