--- a/pages/contact.html
+++ b/pages/contact.html
@@ -79,25 +79,32 @@
         <div class="social-networks">
             <h4>Contact Me</h4>
             <ul>
-                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica">Github</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="./contact.html">DM</a></li>
+                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
+                <li><a href=""><img src="../img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
+                <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" alt="gmail"></a></li>
             </ul>
+            <p>©️ diliannyalbornoz@gmail.com</p>
         </div>
 
         <div class="credits">
             <h4>Recursos</h4>
             <ul>
-                <li><a href="https://www.wallpaperbetter.com/es/hd-wallpaper-waxow">Header</a></li>
                 <li><a href="https://www.behance.net/gallery/136335253/Michis-Brand-Identity">Logo</a></li>
+                <li><a href="https://iconos8.es/">Iconos</a></li>
+                <li><a href="https://www.wallpaperbetter.com/es/hd-wallpaper-waxow">Header</a></li>
                 <li><a href="https://uiverse.io/mrhyddenn/calm-snail-67">Loading</a></li>
             </ul>
         </div>
 
         <div class="bye-message">
-            <h4>More info</h4>
-            <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <h4>Navegación</h4>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./facts.html">Facts</a></li>
+            </ul>
         </div>
     </footer>
 
