ahora si de verdad

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <div class="social-networks">
                 <h4>Contact Me</h4>
                 <ul>
-                    <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
-                    <li><a href=""><img src="../img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
-                    <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
-                    <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" alt="gmail"></a></li>
+                    <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img src="./img/redesSociales/icons8-github.svg" alt="github"></a></li>
+                    <li><a href=""><img src="./img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
+                    <li><a href=""><img src="./img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
+                    <li><a href="../contact.html"><img src="./img/redesSociales/icons8-gmail.svg" alt="gmail"></a></li>
                 </ul>
-                <p>©️ diliannyalbornoz@gmail.com</p>
+                
             </div>
     
             <div class="credits">
@@ -95,6 +95,7 @@
                     <li><a href="./pages/facts.html">Facts</a></li>
                 </ul>
             </div>
+            <p>©️ diliannyalbornoz@gmail.com</p>
         </footer>
     </main>
 
