tamaño icono de gmail cambiado

--- a/pages/facts.html
+++ b/pages/facts.html
@@ -68,7 +68,7 @@
                 <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
                 <li><a href=""><img src="../img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
                 <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
-                <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" alt="gmail"></a></li>
+                <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail" alt="gmail"></a></li>
             </ul>
         </div>
 
