--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../CSS/contact.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>😽Chill and Michis😽 Contacto</title>
+    <title>😽Chill and Michis😽 Contact Me</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -46,29 +46,29 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
     </aside>
     <main>
         <div class="container"> 
-            <h1>Formulario de Contacto</h1>
+            <h1>Contact Me</h1>
             <form id="contact-form">
               <div class="form-group">
-                <label for="name">Nombre:</label>
+                <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
               </div>
               <div class="form-group">
-                <label for="email">Correo Electrónico:</label>
+                <label for="email">Email address:</label>
                 <input type="email" id="email" name="email" required>
               </div>
               <div class="form-group">
-                <label for="message">Mensaje:</label>
+                <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="5" required></textarea>
               </div>
               <div class="more-michis-button">
-                <button type="submit" class="learn-more" id="more-michis">Enviar</button>
+                <button type="submit" class="learn-more" id="more-michis">Send</button>
             </div>
             </form>
         </div>
@@ -88,21 +88,21 @@
         </div>
 
         <div class="credits">
-            <h4>Recursos</h4>
+            <h4>Resources</h4>
             <ul>
                 <li><a href="https://www.behance.net/gallery/136335253/Michis-Brand-Identity">Logo</a></li>
-                <li><a href="https://iconos8.es/">Iconos</a></li>
+                <li><a href="https://iconos8.es/">Icons</a></li>
                 <li><a href="https://www.wallpaperbetter.com/es/hd-wallpaper-waxow">Header</a></li>
                 <li><a href="https://uiverse.io/mrhyddenn/calm-snail-67">Loading</a></li>
             </ul>
         </div>
 
         <div class="bye-message">
-            <h4>Navegación</h4>
+            <h4>Navigation</h4>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
