--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
@@ -76,21 +76,21 @@
         </div>
 
         <div class="credits">
-            <h4>Recursos</h4>
+            <h4>Resources</h4>
             <ul>
                 <li><a href="https://www.behance.net/gallery/136335253/Michis-Brand-Identity">Logo</a></li>
-                <li><a href="https://iconos8.es/">Iconos</a></li>
+                <li><a href="https://iconos8.es/">Icons</a></li>
                 <li><a href="https://www.wallpaperbetter.com/es/hd-wallpaper-waxow">Header</a></li>
                 <li><a href="https://uiverse.io/mrhyddenn/calm-snail-67">Loading</a></li>
             </ul>
         </div>
 
         <div class="bye-message">
-            <h4>Navegación</h4>
+            <h4>Navigation</h4>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
-                <li><a href="./contact.html">Contacto</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
