Pop up agregado

--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -47,6 +47,15 @@
         </div>
     </aside>
     <main>
+        
+    <div class="are-you-sure hidden">
+        <p>Are you sure you want to delete all the michis?</p>
+        <div class="botones">
+            <button id="yes">Yes</button>
+            <button id="no">No</button>
+        </div>
+    </div>
+    
         <div class="container"> 
             <div class='mensajito'>
                 <p id="mensajito-emptyFavs">Please, add some michis to your favorite list first, go back to the <a href="../index.html"> home </a>page</p>
