--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         </div>
         <div id="mensaje-guardado" class="mensaje-guardado"><span>¡El michi se guardó en favoritos!</span></div>
         
+        <div class="contador">
+            <p><span id="contador">0</span>/12</p>
+        </div>
+
         <footer>
             <div class="social-networks">
                 <h4>Contact Me</h4>
