--- a/pages/facts.html
+++ b/pages/facts.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/facts.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>😽Chill and Michis😽 Facts</title>
 </head>
+
 <body>
     <header>
         <img src="../img/michi-header.jpg" alt="">
@@ -48,8 +51,8 @@
         </div>
     </aside>
     <main>
-        <div class="container"> 
-            
+        <div class="container">
+
             <section class="random-facts">
                 <h3>Random facts about cats: </h3>
                 <p id="facts"></p>
@@ -59,16 +62,18 @@
                 <button class="learn-more" id="catFactsButton">Another fact</button>
             </div>
         </div>
-        
+
     </main>
     <footer>
         <div class="social-networks">
             <h4>Contact Me</h4>
             <ul>
-                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
+                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img
+                            src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
                 <li><a href=""><img src="../img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
                 <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
-                <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail" alt="gmail"></a></li>
+                <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail"
+                            alt="gmail"></a></li>
             </ul>
         </div>
 
@@ -95,4 +100,5 @@
     </footer>
     <script src="../scripts/factsScript.js"></script>
 </body>
+
 </html>
