--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../CSS/contact.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>😽Chill and Michis😽 Contact Me</title>
+    <link rel="icon" href="../img/icons8-gato-50.png" type="image/png">
+    <title>Michis and Chill😽 Contact Me</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <div class="menu-desktop">
             <figure><img src="../img/logo.png" alt="Logo"></figure>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
@@ -44,7 +45,7 @@
     <aside>
         <div class="aside-menu-mobile hidden">
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
@@ -52,39 +53,42 @@
         </div>
     </aside>
     <main>
-        <div class="container"> 
+        <div class="container">
             <h1>Contact Me</h1>
             <form id="contact-form">
-              <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-              </div>
-              <div class="form-group">
-                <label for="email">Email address:</label>
-                <input type="email" id="email" name="email" required>
-              </div>
-              <div class="form-group">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-              </div>
-              <div class="more-michis-button">
-                <button type="submit" class="learn-more" id="more-michis">Send</button>
-            </div>
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email address:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <div class="more-michis-button">
+                    <button type="submit" class="learn-more" id="more-michis">Send</button>
+                </div>
             </form>
         </div>
+
         <div id="mensaje-guardado" class="mensaje-guardado"><span>¡El michi se guardó en favoritos!</span></div>
-     
+
     </main>
     <footer>
         <div class="social-networks">
             <h4>Contact Me</h4>
             <ul>
-                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
+                <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img
+                            src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
                 <li><a href=""><img src="../img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li> 
-                <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail" alt="gmail"></a></li>
+                <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
+                <li><a href="./contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail"
+                            alt="gmail"></a></li>
             </ul>
-            
+
         </div>
 
         <div class="credits">
@@ -100,7 +104,7 @@
         <div class="bye-message">
             <h4>Navigation</h4>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
