--- a/pages/facts.html
+++ b/pages/facts.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../CSS/facts.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>😽Chill and Michis😽 Facts</title>
+    <link rel="icon" href="../img/icons8-gato-50.png" type="image/png">
+    <title>Michis and Chill😽 Facts</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <div class="menu-desktop">
             <figure><img src="../img/logo.png" alt="Logo"></figure>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
