--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../CSS/favorites.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>😽Chill and Michis😽 Favorites</title>
+    <link rel="icon" href="../img/icons8-gato-50.png" type="image/png">
+    <title>Michis and Chill😽 Favorites</title>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <div class="menu-desktop">
             <figure><img src="../img/logo.png" alt="Logo"></figure>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
@@ -42,7 +43,7 @@
     <aside>
         <div class="aside-menu-mobile hidden">
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
@@ -75,7 +76,7 @@
         <div class="container">
             <div class='mensajito'>
                 <p id="mensajito-emptyFavs">Please, add some michis to your favorite list first, go back to the <a
-                        href="../index.html"> home </a>page</p>
+                        href="./index.html"> home </a>page</p>
             </div>
 
             <section class="container-Favmichis">
@@ -99,7 +100,7 @@
                             src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
                 <li><a href=""><img src="../img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
                 <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
-                <li><a href="../contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail"
+                <li><a href="./contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail"
                             alt="gmail"></a></li>
             </ul>
 
@@ -118,7 +119,7 @@
         <div class="bye-message">
             <h4>Navigation</h4>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
@@ -130,8 +131,7 @@
     <div class="darken hidden">
 
     </div>
-    <script src="../script.js"></script>
-
+    <script src="../scripts/script.js"></script>
 </body>
 
 </html>
