--- a/pages/index.html
+++ b/pages/index.html
@@ -5,39 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>😽Chill and Michis😽 Home</title>
+    <link rel="icon" href="../img/icons8-gato-50.png" type="image/png">
+    <title>Michis and Chill😽 Home</title>
 </head>
 
 <body>
     <header>
-        <img src="./img/michi-header.jpg" alt="">
+        <img src="../img/michi-header.jpg" alt="">
     </header>
     <nav>
         <div class="menu-desktop">
             <figure>
-                <img src="./img/logo.png" alt="Logo">
+                <img src="../img/logo.png" alt="Logo">
             </figure>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/favorites.html">Favorites</a></li>
-                <li><a href="./pages/contact.html">Contact</a></li>
-                <li><a href="./pages/facts.html">Facts</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
 
         <div class="menu-mobile">
             <div class="left-menu">
                 <figure>
-                    <img src="./img/icons8-menu.svg" class="left" alt="">
+                    <img src="../img/icons8-menu.svg" class="left" alt="">
                 </figure>
             </div>
 
             <div class="right-menu">
                 <figure>
-                    <img src="./img/logo.png" class="right" alt="Logo">
+                    <img src="../img/logo.png" class="right" alt="Logo">
                 </figure>
             </div>
         </div>
@@ -46,13 +47,27 @@
         <div class="aside-menu-mobile hidden">
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/favorites.html">Favorites</a></li>
-                <li><a href="./pages/contact.html">Contact</a></li>
-                <li><a href="./pages/facts.html">Facts</a></li>
+                <li><a href="./favorites.html">Favorites</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./facts.html">Facts</a></li>
             </ul>
         </div>
     </aside>
     <main>
+
+        <aside class="preview-home hidden">
+            <div class="preview-michi">
+                <div class="boton-cerrar-preview">
+                    <img src="../img/icons8-x-100.png" alt="close-button" class="close-button-home">
+                </div>
+                <div class="like-michi-preview">
+                    <button class="like-preview">🤍</button>
+                </div>
+                <img src="https://cdn2.thecatapi.com/images/cq3.jpg" alt="gatitofav" class="gatito-preview-home">
+
+            </div>
+        </aside>
+
         <div class="container">
             <section class="container-michis">
                 <div class="loader-div">
@@ -78,10 +93,10 @@
                 <h4>Contact Me</h4>
                 <ul>
                     <li><a href="https://github.com/DiliannyArriaz/ProyectoFinalBAMultiplica"><img
-                                src="./img/redesSociales/icons8-github.svg" alt="github"></a></li>
-                    <li><a href=""><img src="./img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
-                    <li><a href=""><img src="./img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
-                    <li><a href="../contact.html"><img src="./img/redesSociales/icons8-gmail.svg" class="gmail"
+                                src="../img/redesSociales/icons8-github.svg" alt="github"></a></li>
+                    <li><a href=""><img src="../img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
+                    <li><a href=""><img src="../img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
+                    <li><a href="./contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail"
                                 alt="gmail"></a></li>
                 </ul>
             </div>
@@ -100,16 +115,18 @@
                 <h4>Navigation</h4>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./pages/favorites.html">Favorites</a></li>
-                    <li><a href="./pages/contact.html">Contact</a></li>
-                    <li><a href="./pages/facts.html">Facts</a></li>
+                    <li><a href="./favorites.html">Favorites</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./facts.html">Facts</a></li>
                 </ul>
             </div>
             <p>©️ diliannyalbornoz@gmail.com</p>
         </footer>
     </main>
+    <div class="darken hidden">
 
-    <script src="./script.js"></script>
+    </div>
+    <script src="../scripts/script.js"></script>
 </body>
 
 </html>
