--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -20,7 +20,7 @@
         <div class="menu-desktop">
             <figure><img src="../img/logo.png" alt="Logo"></figure>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
@@ -43,7 +43,7 @@
     <aside>
         <div class="aside-menu-mobile hidden">
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
@@ -76,7 +76,7 @@
         <div class="container">
             <div class='mensajito'>
                 <p id="mensajito-emptyFavs">Please, add some michis to your favorite list first, go back to the <a
-                        href="./index.html"> home </a>page</p>
+                        href="../index.html"> home </a>page</p>
             </div>
 
             <section class="container-Favmichis">
@@ -119,7 +119,7 @@
         <div class="bye-message">
             <h4>Navigation</h4>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
