--- a/pages/facts.html
+++ b/pages/facts.html
@@ -20,7 +20,7 @@
         <div class="menu-desktop">
             <figure><img src="../img/logo.png" alt="Logo"></figure>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./favorites.html">Favorites</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./facts.html">Facts</a></li>
