--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 src="./img/redesSociales/icons8-github.svg" alt="github"></a></li>
                     <li><a href=""><img src="./img/redesSociales/icons8-facebook.svg" alt="facebook"></a></li>
                     <li><a href=""><img src="./img/redesSociales/icons8-twitter.svg" alt="twitter"></a></li>
-                    <li><a href="./pages/contact.html"><img src="../img/redesSociales/icons8-gmail.svg" class="gmail"
+                    <li><a href="./pages/contact.html"><img src="./img/redesSociales/icons8-gmail.svg" class="gmail"
                                 alt="gmail"></a></li>
                 </ul>
             </div>
