--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <aside class="preview-home hidden">
             <div class="preview-michi">
                 <div class="boton-cerrar-preview">
-                    <img src="../img/icons8-x-100.png" alt="close-button" class="close-button-home">
+                    <img src="./img/icons8-x-100.png" alt="close-button" class="close-button-home">
                 </div>
                 <div class="like-michi-preview">
                     <button class="like-preview">🤍</button>
